2001-02-25  Akim Demaille  <akim@epita.fr>

	* autoupdate.in (&END): Try to preserve the exit status.
	Use backquotes where more readable.
	Internal details should be dumped when $debug, not when $verbose.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* autoupdate.in (&mktmpdir): New.
	(&END): Remove $tmp.
	(&parse_args): Handle -d and -l.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PREPARE): Remove conf$$* on exit.
	* m4sh.m4 (_AS_LN_S_PREPARE, _AS_BROKEN_TEST_PREPARE):
	s/conftest/conf$$/ to avoid race conditions.
	From Lars J. Aas.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_PROG_INSTALL): Use ac_path_separator.
	Restore the IFS earlier.
	Suggested by Tim Van Holder.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* m4sh.m4 (_AS_TEST_PREPARE): Rename as...
	(_AS_BROKEN_TEST_PREPARE): this.
	(_AS_TEST_PREPARE): New dummy but working version of this macro.
	* acspecific.m4 (AC_PROG_INSTALL): Use AS_EXECUTABLE_P.

2001-02-25  Akim Demaille  <akim@epita.fr>

	* autoupdate.in (&parse_args): Support `-'.

	
2001-02-25  Akim Demaille  <akim@epita.fr>

	* autoupdate.in: Less Bournisms, more Wallisms.

2001-02-23  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (_AC_INIT_PREPARE_FS_SEPARATORS): Fix typo: s/;/:/
	* acgeneral.m4 (_AC_INIT_PREPARE_FS_SEPARATORS): Revert that change.
	There was no typo.

2001-02-22  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Typos and formatting changes.

2001-02-21  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Use `AS_EXIT(0)' instead
	of `exit 0' when exiting config.status.

2001-02-21  Tim Van Holder  <tim.van.holder@pandora.be>

	* doc/autoconf.texi: Add new node discussing issues related to
	file systems (DOS, specifically).  Document DJGPP's bash's special
	handling of $PATH_SEPARATOR.

2001-02-21  Akim Demaille  <akim@epita.fr>

	* autoupdate.in: New.  Replaces autoupdate.sh.

2001-02-21  Akim Demaille  <akim@epita.fr>
